# XPManager

./: .gitignore  Cargo.toml  ERROR.md  LICENSE  README.md  USAGE.md  requirements.txt  xpm.py
.github/workflows/: release.yml  test.yml
src/: main.rs
src/backup_manager/: backup.rs  mod.rs  restore.rs
src/commands/: mod.rs
src/dblib/: log.rs  mod.rs  pm.rs
src/displaylib/: encode.rs  key.rs  log.rs  mod.rs  passwords.rs
src/encryption_manager/: decode.rs  decrypt_dir.rs  decrypt_file.rs  encode.rs  encrypt_dir.rs  encrypt_file.rs  mod.rs
src/errorlib/: mod.rs
src/filelib/: log.rs  mod.rs  pm.rs
src/log_manager/: clear.rs  delete.rs  find.rs  mod.rs  show.rs
src/loglib/: mod.rs  password_manager.rs
src/matcheslibs/: mod.rs
src/password_manager/: count.rs  decrypt.rs  delete.rs  encrypt.rs  find.rs  generate.rs  mod.rs  save.rs  show.rs  update.rs
src/utilities/: mod.rs
xpmlib/: __init__.py
xpmlib/Color/: DOC.md  __init__.py
xpmlib/Display/: DOC.md  __init__.py  display.py  enorde.py  error.py  key.py  password.py  removing.py  saved.py  setting.py
xpmlib/Error/: DOC.md  __init__.py
xpmlib/File/: DOC.md  Paths.py  Read.py  Write.py  __init__.py
xpmlib/FileEncryption/: DOC.md  __init__.py  check.py  decryption.py  encryption.py
xpmlib/Key/: DOC.md  __init__.py  key_secure.py
xpmlib/PasswordManagement/: DOC.md  __init__.py  generate.py  get.py  modify.py  save.py
xpmlib/Tar/: DOC.md  __init__.py  extract.py  tar.py
xpmlib/Upload/: DOC.md  __init__.py  mega.py
xpmlib/ctype/: DOC.md  TypeChecker.py  __init__.py
