[package]
name = "XPManager"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.28.1"
dirs = "6.0.0"
fernet = "0.2.2"
rand = "0.9.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = "1.0.219"
serde_json = "1.0.140"
tabled = "0.18.0"
