[package]
name = "XPManager"
version = "2.0.0"
edition = "2021"
description = "XPManager is a CLI tool specialized in dealing with passwords management and file encryption/decryption."
authors = ["Mohaned Sherhan"]
license = "MIT"
repository = "https://github.com/Mohaned2023/XPManager"
documentation = "https://github.com/Mohaned2023/XPManager"
homepage = "https://github.com/Mohaned2023/XPManager"

[[bin]]
name = "xpm"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.28.1"
dirs = "6.0.0"
fernet = "0.2.2"
rand = "0.9.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = "1.0.219"
serde_json = "1.0.140"
tabled = "0.18.0"
