[package]
name = "XPManager"
version = "2.2.0"
edition = "2021"
description = "A fast and efficient CLI tool for managing passwords and encrypting sensitive data."
authors = ["Mohaned Sherhan"]
license = "MIT"
keywords = ["cli", "encryption", "password", "manager"]
repository = "https://github.com/xpmanager/XPManager"
documentation = "https://xpmanager.github.io/docs/intro"
homepage = "https://xpmanager.github.io/"

[[bin]]
name = "xpm"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.28.1"
dirs = "6.0.0"
fernet = "0.2.2"
num_cpus = "1.16.0"
rand = "0.9.0"
rayon = "1.10.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = "1.0.219"
serde_json = "1.0.140"
tabled = "0.18.0"

[package.metadata.deb]
maintainer = "Mohaned Sherhan"
copyright = "2025, Mohaned Sherhan"
license-file = ["LICENSE"]
extended-description = """A fast and efficient CLI tool for managing passwords and encrypting sensitive data."""
depends = "$auto"
assets = [
    ["target/release/xpm", "usr/local/bin/", "755"],
]
